tests/ui/imports/issue-47623.stderr
error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/issue-47623.rs:1:5
   |
LL | use self;
   |     ^^^^

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0429`.
